# gameWatch_c

./: .gitignore  CMakeLists.txt  README.md  TODO.md  configure.sh  make.sh  run.sh  share.sh
src/: defines.h  example.c  m1.c  main.c  main_functions.c  main_functions.h  notes  platform_agnostic.c  platform_agnostic.h  platform_others.c  platform_others.h  platform_windows.c  platform_windows.h  platforms.h
src/sub/: constants.h  messages.h  types.h  utils.c  utils.h
